Fixed some syntax issues with the index.css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .bg-site {
-    background-image: url('./assets/bg-1.png');
+    background-image: url('../assets/bg-1.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -10,7 +10,7 @@
 @layer base {
     @font-face {
         font-family: 'pokemonPixelFont';
-        src: url('assets/pokemon_pixel_font.woff') format('woff');
+        src: url('../assets/pokemon_pixel_font.woff') format('woff');
         font-weight: normal;
         font-style: normal;
     }
