Optimized background image

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .bg-site {
-    background-image: url('../assets/bg-1.png');
+    background-image: url('../assets/bg-1.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
